# zakip-voice

./: .env.deploy.example  .gitignore  .prettierrc.json  CLAUDE.md  LICENSE  README.md  components.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml  postcss.config.js  recording-popup.html  tailwind.config.js  tsconfig.json  vite.config.ts
.github/: DEPLOYMENT.md
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  code-quality.yml  deploy-release.yml
deploy/examples/: README.md  apache.conf  nginx.conf
public/: index.html
public/css/: style.css
scripts/: README.md  appimage-apprun.sh  build-macos-local.sh  clean-repo.sh  create-module.sh  fix-appimage-linux.sh  generate-signing-key.sh  release-cli.js  release.sh  set-version.js  test-deploy.sh
src/: App.tsx
src-tauri/: ARCHITECTURE.md  Cargo.toml  Info.plist  LOGGING.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs  secure_storage.rs
src-tauri/src/ai/: error.rs  mod.rs  provider.rs  proxy.rs  types.rs
src-tauri/src/ai/providers/: openai.rs
src-tauri/src/audio/: mod.rs  recorder.rs  types.rs
src-tauri/src/local_models/: catalog.rs  manager.rs  mod.rs  whisper.rs
src/appInitializer/: AppInitializer.ts  StateAutoSaver.ts  StateCleanup.ts  StateInitializer.ts
src/appInitializer/module/: G.ts
src/appInitializer/store/: GlobalStore.ts  index.ts  (+1 more)
src/autoUpdate/: AutoUpdateModule.ts
src/consts/: FUNCTION_KEY_NAME.ts
src/dataGenerator/: dataGenerator.ts
src/globalShortcuts/: GlobalShortcut.ts  GlobalShortcuts.ts  globalShortcutsConfig.ts
src/hooks/: useGlobalState.ts  useGlobalStore.ts  useRegisterShortcut.ts
src/icons/: IconView.tsx
src/logger/: Logger.ts
src/navigation/: useNavigation.ts
src/rustProxy/: README.md  RustProxy.ts  RustProxyModule.ts
src/sound/: sounds.ts
src/types/: NavigationItem.ts
src/utils/: appEnvironment.ts  audioNotifications.ts  backendAudioRecorder.ts  clipboard.ts  keystroke.ts  windowUtils.ts
src/views/: Root.tsx  main.tsx
src/voice/: VoiceModule.ts
(+103 files in other folders)
