[package]
name = "zakip-voice"
version = "0.9.10"
description = "Voice transcription desktop app with AI enhancement"
authors = ["Lukasz Gorka"]
license = "MIT"
repository = "https://github.com/lukasz-gorka/zakip-voice"
homepage = "https://zakip-voice.luksite.pl"
keywords = ["ai", "assistant", "productivity", "tauri", "desktop"]
categories = ["gui", "utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "protocol-asset", "macos-private-api", "tray-icon"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-process = "2"
tauri-plugin-clipboard-manager = "2.0.2"
tauri-plugin-os = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-single-instance = "2"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream", "multipart"] }
eventsource-stream = "0.2"
tokio-stream = "0.1"
async-trait = "0.1"
futures = "0.3"
# Error handling
thiserror = "2.0"
anyhow = "1.0"
# Time handling
chrono = "0.4"
# Secure credential storage - use encrypted file instead of keyring (more reliable)
aes-gcm = "0.10"
base64 = "0.22"
sha2 = "0.10"
whoami = "1.5"
# Keyboard/mouse simulation for auto-paste
enigo = "0.3"
# Audio recording
cpal = "0.15"
hound = "3.5"
# Local whisper model inference
whisper-rs = "0.12"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"

[patch.crates-io]
objc_id = { git = "https://github.com/SSheldon/rust-objc-id" }
